force-app/main/default/objects/BGBK__Cart_Item__c/BGBK__Cart_Item__c.object-meta.xml
<CustomObject>
    <description>Cart item is used to record history of payments/partial payments of Fees/Invoices/Deposits through Cart</description>
    <label>Cart Item</label>
    <nameField>
        <displayFormat>CI-{0000000}</displayFormat>
        <label>Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>