force-app/main/default/objects/BGBK__Cart_Item__c/fields/BGBK__Cart__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cart__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Cart which was used to pay the cart item</description>
    <inlineHelpText>Cart which was used to pay the cart item</inlineHelpText>
    <label>Cart</label>
    <referenceTo>BGBK__Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>