force-app/main/default/objects/BGBK__Cart_Item__c/fields/BGBK__Deposit__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated deposit record</description>
    <inlineHelpText>Lookup to the associated deposit record</inlineHelpText>
    <label>Deposit</label>
    <referenceTo>MUSW__Deposit__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>