force-app/main/default/objects/BGBK__Cart_Item__c/fields/BGBK__Fee__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated fee record</description>
    <inlineHelpText>Lookup to the associated fee record</inlineHelpText>
    <label>Fee</label>
    <referenceTo>MUSW__Fee__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>