force-app/main/default/objects/BGBK__Cart_Item__c/fields/BGBK__Invoice__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated invoice record</description>
    <inlineHelpText>Lookup to the associated invoice record</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>BGBK__Bill__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>