force-app/main/default/objects/BGBK__Cart_Item__c/fields/BGBK__Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Amount__c</fullName>
    <description>Payment / Partial Payment amount of the fee/invoice/deposit</description>
    <inlineHelpText>Payment / Partial Payment amount of the fee/invoice/deposit</inlineHelpText>
    <label>Payment Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>